# firefly-iii-toolkit

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  allegro.py  app.py  citi_conv.py  csv_reader.py  main.py  main2.py  main_class.py  makefile  pyproject.toml  tx_processor.py  txt_parser.py
app/: config.py  main.py
app/api/: file.py  upload.py
app/services/: auth.py  csv_reader.py  tx_processor.py
app/utils/: encoding.py
backend/: CHANGELOG.md  pyproject.toml
backend/app/: config.py  main.py  settings.py
backend/app/api/: auth.py  file.py  upload.py
backend/app/routers/: file.py  login.py  upload.py
backend/app/services/: auth.py  tx_processor.py
backend/app/utils/: logger.py
backend/static/: app.js  auth.js  demo.html  match.html
backend/templates/: base.html  file.html  login.html  login2.html  match.html  upload.html
legacy/: main.py  txt_parser.py
src/: main.py
src/api/models/: blik_files.py
src/api/routers/: auth.py  blik_files.py  system.py
src/services/: csv_reader.py  tx_processor.py
tests/models/: test_simplified_record_pretty_print.py
